--- a/smileys/dkmsn/smileys.ini
+++ b/smileys/dkmsn/smileys.ini
@@ -1,8 +1,8 @@
 Teeth.png = E|=)
 Happy.png = :-)
 Happy.png = :)
-Angry.png = &gt;:-(
-Angry.png = &gt;:(
+Angry.png = >:-(
+Angry.png = >:(
 Unhappy.png = :-(
 Unhappy.png = :(
 Middle.png = :-|
@@ -14,7 +14,7 @@ Confused.png = :S
 Shocked.png = :-O
 Shocked.png = :O
 Shocked.png = :-o
-Shocked.png = :o
+Shocked.png= :o
 Haha.png = :-D
 Haha.png = :D
 ExtraHappy.png = E-D
