Gestion des langues exteriorisée des templates

--- a/configuration.ini
+++ b/configuration.ini
@@ -21,6 +21,7 @@ HistoryScript = history
 ; Classe de rendu : wiki2xhtml ou WikiRenderer
 Renderer = wiki2xhtml
 
-; Smileys et thème à utiliser
+; Smileys, thème et langue à utiliser
 SmileyPath = smileys/dkmsn
-ThemePath = themes/default
+ThemePath = theme/default
+LanguagePath = lang/cn
