--- a/configuration.ini
+++ b/configuration.ini
@@ -1,4 +1,4 @@
-; Titre de votre wiki
+﻿; Titre de votre wiki
 Title = ChuWiki
 
 ; Permet de ne pas utiliser le PathInfo
@@ -24,4 +24,4 @@ Renderer = wiki2xhtml
 ; Smileys, thème et langue à utiliser
 SmileyPath = smileys/dkmsn
 ThemePath = theme/default
-LanguagePath = lang/cn
+LanguagePath = lang/fr
