--- a/configuration.ini
+++ b/configuration.ini
@@ -23,5 +23,5 @@ Renderer = wiki2xhtml
 
 ; Smileys, thème et langue à utiliser
 SmileyPath = smileys/dkmsn
-ThemePath = theme/default
+ThemePath = theme/menu
 LanguagePath = lang/fr
