ChuWiki 1.3 - theme Menu officiel - WikiRenderer 3.0 - wiki2xhtml 3.1d - vérification UTF-8 désactivée par défaut - ajout de l'option VerifyUtf8 pour réactiver la vérification

--- a/trunk/configuration.ini
+++ b/trunk/configuration.ini
@@ -23,5 +23,5 @@ Renderer = wiki2xhtml
 
 ; Smileys, thème et langue à utiliser
 SmileyPath = smileys/dkmsn
-ThemePath = theme/menu
+ThemePath = theme/default
 LanguagePath = lang/fr
