--- a/trunk/.htaccess
+++ b/trunk/.htaccess
@@ -1,7 +1,7 @@
 # Afin de ne pas spécifier l'extension des fichiers dans les URI
 Options +MultiViews
 
-# Protection des fichiers utilisés seulement par PHP
-<FilesMatch configuration\.ini|sdk|pages>
+# Protection du fichier de configuration
+<Files configuration.ini>
 	Deny from all
-</FilesMatch>
+</Files>
